--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
     "servers": ["471630590806851584"],
     "roleName": "Rainbow",
     "speed": 100000,
-    "logging": true
+    "logging": true,
+	"kuc":3600000
 }
