--- a/config.json
+++ b/config.json
@@ -1,7 +1,9 @@
 {
     "servers": ["471630590806851584"],
     "roleName": "Rainbow",
+    "colors": 40,
     "speed": 100000,
     "logging": true,
-	"kuc": 3600000
+	"kuc":3600000,
+	"kr":900000
 }
