--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "discord.js": "^11.5.1",
     "node-datetime": "^2.1.2",
-    "sqlite3": "^4.0.9"
+    "sqlite3": "^4.0.9",
+    "youtube-search": "^1.1.4",
+    "ytdl-core": "^0.29.5"
   },
   "devDependencies": {},
   "repository": {
