add ban message

--- a/config.json
+++ b/config.json
@@ -571,5 +571,35 @@
     "Я вышла в вагон, как с порога своей парадной. \nОстаться бы тихой, не портить слезами ветер, \nНо память скрипит, искривляется беспощадно \nПод тяжестью старых, когда-то смешных трагедий. \nНо память сминает белье, заползает в горло, \nРуками моими трясет, как своей игрушкой. \nЯ помню так много, что старые разговоры\nВползают мне в голову, вечно мешая слушать. \nНо что остается? Стремление к реализму \nЗаставит запомнить все байки на нижней полке. \nИ сколько ни сыпь уморительных афоризмов – \nМне кажется, будто на шею летят осколки. \nОт каждой детали – и старых проколов мочки, \nИ милой манеры сидеть, обхватив колено, \nГнетущее прошлое тянет к себе цепочки. \nИ я не смеюсь, если шутят – опять колеблюсь, \nПод тяжестью старых , когда-то еще покорных \nТрагедий. И слезы то душат, то отползают. \nСквозь зелень опять проступают сухие кроны. \nИ я не могу перестать их искать глазами. \n",
     "Мой взгляд превращается в два пулемета, \nКулак – в обещанье гранаты. \nИ пусть ты прекрасна, как в небе – комета, \nНо все же не трогай, не надо. \n \nЯ знаю, что боль не была твоей целью, \nИ так в голове – канонады. \nНо каждый поступок имеет свой ценник, \nА каждый участок – ограду. \n \nИ ты не настолько прекрасна, чтобы каждый \nПошел за тобой, как за пеньем ундин. \nТы можешь вредить. Это было однажды. \nА значит уйди.\n",
     "И кто-то скажет, улыбаясь чистопородно - \nчто ты пограничник, прочие качества не важны. \nЧто ты исчислен, взвешен, измерен и найден годным, \nи ты кирпич четвертой, обреченной стены. \nНу а потом тебя поставят на страже мира, \n- ты охраняешь эту белую пустоту - \nлови территорию, от пунктира и до пунктира. \nИ на растопку энциклопедию отдадут. \n\nИ вот замерзая, грея ладони, \nты стоишь на южном кордоне, \nвот и смотришь на небо, словно через прицел. \nПо тучам прыгает солнечный зайчик, \nа значит, может быть, это значит, \nчто желтый шарик в этом небе сегодня цел. \n\nОн кружится сверху, как реликтовая игрушка, \nв наследство выданный, как фамилия и земля. \nТы на границе, поскольку это и вправду нужно, \nхоть в одиночку тут быть кому-то выше нуля. \nНу а еще тебе дали право смотреть на солнце, - \nгляди не мигая, сквозь метель и снежную взвесь. \nНи по какому компасу, ни по одной из лоций \nтебе непонятно куда идти и зачем ты здесь. \n\nИдет по вене червона рута, \nбурля на сложных местах маршрута, \nперетекая через подранные места. \nСебя переделывать - сложный опыт, \nи, будь ты хоть гением фотошопа, \n- не подорваться сквозь края своего листа. \n\nНо ты пограничник, а на границе законы гетто. \nЧего-то не понял - недолго прожил и это всё. \nВерти башкой, ищи ориентир, которого нету, \nа если появится, - за пять минут занесёт. \nНо не побился в шапке старенький и поблеклый \nдешевый градусник, с коим ты отправлялся в рейд. \nвнутри осталось немного страха, но нет упрека - \nхрани тебя святые Кельвин и Фаренгейт. \n\nИдет эпоха, плывет эпоха, \nкому-то круто, кому-то плохо, \nмногие сами себе и лодочка и гольфстрим. \nА у тебя - нелепая радость, \nты выше нуля и знаешь свой градус, \nа значит, азимут по компасу - вычислим. \n"
+  ],
+  "ban" : ["Ваш запрос @number в общей очереди",
+    "Забанен)))0)))000000000000000000)",
+    "В вашем сердечке уж точно:broken_heart: ",
+    "Повторите запрос",
+    "А что бы сказал Иисус?",
+    "ЗАБАНЕН И УНИЧТОЖЕН!:japanese_goblin:",
+    "Но не сегодня",
+    "Нет, ты \n!ban @author",
+    "@author вообще-то скорее тебе тут не рады и тебе тут не место. Пошел вон.",
+    "Себя забань.",
+    "Ну маааааааааааааааааааааааааааааааааааам",
+    "@random тоже забанить?",
+    "Смешные вы всё же, человеки.",
+    "Так он же уже забанен...",
+    "Извини... Вместо @user случайно была забанена твоя матушка.",
+    "Забанен, следующий - ты.",
+    "Друзья, давайте жить дружно!:pleading_face:",
+    "Солнце мое, зачем же сразу банить?",
+    "А раньше ведь и люди были добрее, и трава зеленее...",
+    "Зачем эти ссоры, когда у вас есть бутылка горячительного?",
+    "Будет забанен, как только Нерсер полюбит аниме :purple_heart:",
+    "Дайте лучше я всех вас обниму!:hugging:",
+    "Только если вас двоих:two_hearts:",
+    "А знаете кто ещё банил всех?!",
+    "А вот доносчиков тут не любят:knife:",
+    "А ЕЩЁ ОТКЛЮЧУ ЕМУ ЭЗЕРНЕТ!",
+    "Перепутал кнопки и случайно вызвал @user пиццу!:grimacing:",
+    "Вот вам помада:lipstick:, не ссорьтесь.",
+    "@me забанил себя из-за ваших вечно глупых запросов."
   ]
 }
